// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c7 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  margin-bottom: 3.2rem;
}

.c1 {
  position: relative;
  top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  margin: 0;
  padding: 0 0.4rem 0 0;
  overflow: visible;
  list-style-type: none;
}

.c2 {
  margin-left: 0.4rem;
  padding: 1rem 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-bottom: 1px solid #bbcadf;
  border-radius: 0.6rem 0.6rem 0 0;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: opacity 250ms linear;
  transition: opacity 250ms linear;
}

.c2[aria-selected="false"]:hover {
  opacity: 0.7;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #7994d4;
}

.c3 {
  color: #3e486e;
  background-color: #fff;
}

.c3.react-tabs__tab-panel--selected {
  padding: 2.4rem;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c6 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2rem;
  }
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.4rem;
    border-bottom: 1px solid #bbcadf;
    border-radius: 0.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.4rem;
  }
}

@media (max-width:600px) {
  .c3.react-tabs__tab-panel--selected {
    padding: 1rem;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c6 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 2.2rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-2"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <header
          class="c5"
        >
          <h2
            class="c6"
          >
            <div
              class="c7"
            />
            CDI
          </h2>
        </header>
      </div>
      <div
        class="c8"
      >
        <h3
          class="c9"
        >
          titre 1
        </h3>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="c3"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  margin-bottom: 3.2rem;
}

.c1 {
  position: relative;
  top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  margin: 0;
  padding: 0 0.4rem 0 0;
  overflow: visible;
  list-style-type: none;
}

.c2 {
  margin-left: 0.4rem;
  padding: 1rem 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-bottom: 1px solid #bbcadf;
  border-radius: 0.6rem 0.6rem 0 0;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: opacity 250ms linear;
  transition: opacity 250ms linear;
}

.c2[aria-selected="false"]:hover {
  opacity: 0.7;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #7994d4;
}

.c3 {
  color: #3e486e;
  background-color: #fff;
}

.c3.react-tabs__tab-panel--selected {
  padding: 2.4rem;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  position: relative;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2rem;
  }
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.4rem;
    border-bottom: 1px solid #bbcadf;
    border-radius: 0.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.4rem;
  }
}

@media (max-width:600px) {
  .c3.react-tabs__tab-panel--selected {
    padding: 1rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-6"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
        >
          CDI
        </h4>
      </div>
      <div
        class="c6"
      >
        <h5
          class="c5"
        >
          titre 1
        </h5>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="c3"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  margin-bottom: 3.2rem;
}

.c1 {
  position: relative;
  top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  margin: 0;
  padding: 0 0.4rem 0 0;
  overflow: visible;
  list-style-type: none;
}

.c2 {
  margin-left: 0.4rem;
  padding: 1rem 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-bottom: 1px solid #bbcadf;
  border-radius: 0.6rem 0.6rem 0 0;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: opacity 250ms linear;
  transition: opacity 250ms linear;
}

.c2[aria-selected="false"]:hover {
  opacity: 0.7;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #7994d4;
}

.c3 {
  color: #3e486e;
  background-color: #fff;
}

.c3.react-tabs__tab-panel--selected {
  padding: 2.4rem;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  position: relative;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2rem;
  }
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.4rem;
    border-bottom: 1px solid #bbcadf;
    border-radius: 0.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.4rem;
  }
}

@media (max-width:600px) {
  .c3.react-tabs__tab-panel--selected {
    padding: 1rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-9"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-8"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-11"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-10"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-8"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h5
          class="c5"
        >
          CDI
        </h5>
      </div>
      <div
        class="c6"
      >
        <h6
          class="c5"
        >
          titre 1
        </h6>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="c3"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
